More Express clean up

--- a/DScaler/Plugins/FLT_AdaptiveNoise/FLT_AdaptiveNoise2005.vcproj
+++ b/DScaler/Plugins/FLT_AdaptiveNoise/FLT_AdaptiveNoise2005.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="FLT_AdaptiveNoise"
 	ProjectGUID="{A273AE9F-58F2-4476-9016-996C2861A94D}"
 	>
@@ -234,10 +234,10 @@
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;FLT_AdaptiveNoise_EXPORTS"
 				RuntimeLibrary="1"
-				PrecompiledHeaderFile=".\Debug/FLT_AdaptiveNoise.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				PrecompiledHeaderFile="$(IntDir)\FLT_AdaptiveNoise.pch"
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
@@ -257,12 +257,12 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\Debug/FLT_AdaptiveNoise.dll"
+				OutputFile="..\..\Debug\FLT_AdaptiveNoise.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/FLT_AdaptiveNoise.pdb"
-				ImportLibrary=".\Debug/FLT_AdaptiveNoise.lib"
+				ProgramDatabaseFile="$(IntDir)\FLT_AdaptiveNoise.pdb"
+				ImportLibrary="$(IntDir)\FLT_AdaptiveNoise.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -329,10 +329,10 @@
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;FLT_AdaptiveNoise_EXPORTS"
 				RuntimeLibrary="0"
-				PrecompiledHeaderFile=".\Release/FLT_AdaptiveNoise.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile="$(IntDir)\FLT_AdaptiveNoise.pch"
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
@@ -351,11 +351,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\Release/FLT_AdaptiveNoise.dll"
+				OutputFile="..\..\Release\FLT_AdaptiveNoise.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				OptimizeForWindows98="1"
-				ImportLibrary=".\Release/FLT_AdaptiveNoise.lib"
+				ImportLibrary="$(IntDir)\FLT_AdaptiveNoise.lib"
 				TargetMachine="1"
 			/>
 			<Tool
