--- a/DScaler/Plugins/FLT_Colorimetry/FLT_Colorimetry2005.vcproj
+++ b/DScaler/Plugins/FLT_Colorimetry/FLT_Colorimetry2005.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="FLT_Colorimetry"
 	ProjectGUID="{47741686-2EC4-4200-9F67-CB4247096AE5}"
 	>
@@ -233,16 +233,17 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="3"
-				InlineFunctionExpansion="1"
-				FavorSizeOrSpeed="1"
+				Optimization="0"
+				InlineFunctionExpansion="0"
+				FavorSizeOrSpeed="0"
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;FLT_Colorimetry_EXPORTS"
 				RuntimeLibrary="3"
-				PrecompiledHeaderFile=".\Debug/FLT_Colorimetry.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
@@ -265,8 +266,8 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/FLT_Colorimetry.pdb"
-				ImportLibrary=".\Debug/FLT_Colorimetry.lib"
+				ProgramDatabaseFile="$(IntDir)\FLT_Colorimetry.pdb"
+				ImportLibrary="$(IntDir)\FLT_Colorimetry.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -329,14 +330,17 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				InlineFunctionExpansion="2"
-				FavorSizeOrSpeed="0"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FLT_Colorimetry_EXPORTS"
 				RuntimeLibrary="2"
-				PrecompiledHeaderFile=".\Release/FLT_Colorimetry.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				GenerateXMLDocumentationFiles="false"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -359,7 +363,7 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				OptimizeForWindows98="1"
-				ImportLibrary=".\Release/FLT_Colorimetry.lib"
+				ImportLibrary="$(IntDir)\FLT_Colorimetry.lib"
 				TargetMachine="1"
 			/>
 			<Tool
