--- a/DScaler/Plugins/FLT_DScopeVIDEO/FLT_DScopeVIDEO2005.vcproj
+++ b/DScaler/Plugins/FLT_DScopeVIDEO/FLT_DScopeVIDEO2005.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="FLT_DScopeVIDEO"
 	ProjectGUID="{0A1BDB48-810A-4105-ABBC-28333AD3097C}"
 	RootNamespace="FLT_DScopeVIDEO"
@@ -235,17 +235,17 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="3"
-				InlineFunctionExpansion="1"
-				FavorSizeOrSpeed="1"
+				Optimization="0"
+				InlineFunctionExpansion="0"
+				FavorSizeOrSpeed="0"
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;FLT_DScopeVIDEO_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="3"
-				PrecompiledHeaderFile=".\Debug/FLT_DScopeVIDEO.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
@@ -270,8 +270,8 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/FLT_DScopeVIDEO.pdb"
-				ImportLibrary=".\Debug/FLT_DScopeVIDEO.lib"
+				ProgramDatabaseFile="$(IntDir)\FLT_DScopeVIDEO.pdb"
+				ImportLibrary="$(IntDir)\FLT_DScopeVIDEO.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -331,17 +331,20 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
-				InlineFunctionExpansion="1"
+				Optimization="3"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FLT_DScopeVIDEO_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\Release/FLT_DScopeVIDEO.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -364,7 +367,7 @@
 				OutputFile="..\..\Release\FLT_DScopeVIDEO.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ImportLibrary=".\Release/FLT_DScopeVIDEO.lib"
+				ImportLibrary="$(IntDir)\FLT_DScopeVIDEO.lib"
 				TargetMachine="1"
 			/>
 			<Tool
