--- a/DScaler/Plugins/FLT_Mirror/FLT_Mirror2005.vcproj
+++ b/DScaler/Plugins/FLT_Mirror/FLT_Mirror2005.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="FLT_Mirror"
 	ProjectGUID="{4B500EA0-BDE1-433C-B74B-06FD1A2DC48D}"
 	>
@@ -241,10 +241,11 @@
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\Debug/FLT_Mirror.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
@@ -267,8 +268,8 @@
 				LinkIncremental="0"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/FLT_Mirror.pdb"
-				ImportLibrary=".\Debug/FLT_Mirror.lib"
+				ProgramDatabaseFile="$(IntDir)\FLT_Mirror.pdb"
+				ImportLibrary="$(IntDir)\FLT_Mirror.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -329,18 +330,21 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
-				InlineFunctionExpansion="1"
+				Optimization="3"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FLT_MIRROR_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\Release/FLT_Mirror.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -361,9 +365,9 @@
 				OutputFile="..\..\Release\FLT_Mirror.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ProgramDatabaseFile=".\Release/FLT_Mirror.pdb"
+				ProgramDatabaseFile=""
 				OptimizeForWindows98="1"
-				ImportLibrary=".\Release/FLT_Mirror.lib"
+				ImportLibrary="$(IntDir)\FLT_Mirror.lib"
 				TargetMachine="1"
 			/>
 			<Tool
