--- a/DScaler/Plugins/FLT_BlackWhite/FLT_BlackWhite2005.vcproj
+++ b/DScaler/Plugins/FLT_BlackWhite/FLT_BlackWhite2005.vcproj
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="FLT_BlackWhite"
 	ProjectGUID="{64182EA2-4BE1-473D-87B4-66A220384248}"
+	RootNamespace="FLT_BlackWhite"
 	>
 	<Platforms>
 		<Platform
@@ -232,16 +233,17 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="3"
-				InlineFunctionExpansion="1"
-				FavorSizeOrSpeed="1"
+				Optimization="0"
+				InlineFunctionExpansion="0"
+				FavorSizeOrSpeed="0"
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;FLT_BLACKWHITE_EXPORTS"
 				RuntimeLibrary="3"
-				PrecompiledHeaderFile=".\Debug/FLT_BlackWhite.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
@@ -260,12 +262,12 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\Debug/FLT_BlackWhite.dll"
+				OutputFile="..\..\Debug\FLT_BlackWhite.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/FLT_BlackWhite.pdb"
-				ImportLibrary=".\Debug/FLT_BlackWhite.lib"
+				ProgramDatabaseFile="$(IntDir)\FLT_BlackWhite.pdb"
+				ImportLibrary="$(IntDir)\FLT_BlackWhite.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -328,14 +330,15 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FLT_BLACKWHITE_EXPORTS"
 				RuntimeLibrary="2"
-				PrecompiledHeaderFile=".\Release/FLT_BlackWhite.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -357,7 +360,7 @@
 				OutputFile="..\..\Release/FLT_BlackWhite.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ImportLibrary=".\Release/FLT_BlackWhite.lib"
+				ImportLibrary="$(IntDir)\FLT_BlackWhite.lib"
 				TargetMachine="1"
 			/>
 			<Tool
