--- a/DScaler/Plugins/FLT_Histogram/FLT_Histogram2005.vcproj
+++ b/DScaler/Plugins/FLT_Histogram/FLT_Histogram2005.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="FLT_Histogram"
 	ProjectGUID="{B79E6718-4A3B-4B63-9AF9-34EB3B4B6D5D}"
 	>
@@ -233,16 +233,16 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="3"
-				InlineFunctionExpansion="1"
-				FavorSizeOrSpeed="1"
+				Optimization="0"
+				InlineFunctionExpansion="0"
+				FavorSizeOrSpeed="0"
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;FLT_Histogram_EXPORTS"
 				RuntimeLibrary="3"
-				PrecompiledHeaderFile=".\Debug/FLT_Histogram.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
@@ -266,8 +266,8 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/FLT_Histogram.pdb"
-				ImportLibrary=".\Debug/FLT_Histogram.lib"
+				ProgramDatabaseFile="$(IntDir)\FLT_Histogram.pdb"
+				ImportLibrary="$(IntDir)\FLT_Histogram.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -330,14 +330,16 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FLT_Histogram_EXPORTS"
 				RuntimeLibrary="2"
-				PrecompiledHeaderFile=".\Release/FLT_Histogram.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -359,7 +361,7 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				OptimizeForWindows98="1"
-				ImportLibrary=".\Release/FLT_Histogram.lib"
+				ImportLibrary="$(IntDir)\FLT_Histogram.lib"
 				TargetMachine="1"
 			/>
 			<Tool
