--- a/DScaler/Plugins/FLT_LinearCorrection/FLT_LinearCorrection2005.vcproj
+++ b/DScaler/Plugins/FLT_LinearCorrection/FLT_LinearCorrection2005.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="FLT_LinearCorrection"
 	ProjectGUID="{5EDAFB73-90A7-4080-AD70-00098AC4AC82}"
 	>
@@ -233,10 +233,11 @@
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				RuntimeLibrary="1"
-				PrecompiledHeaderFile=".\Debug/FLT_LinearCorrection.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
@@ -259,8 +260,8 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/FLT_LinearCorrection.pdb"
-				ImportLibrary=".\Debug/FLT_LinearCorrection.lib"
+				ProgramDatabaseFile="$(IntDir)\FLT_LinearCorrection.pdb"
+				ImportLibrary="$(IntDir)\FLT_LinearCorrection.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -328,10 +329,11 @@
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FLT_LINEARCORRECTION_EXPORTS"
 				RuntimeLibrary="0"
-				PrecompiledHeaderFile=".\Release/FLT_LinearCorrection.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -353,7 +355,7 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				OptimizeForWindows98="1"
-				ImportLibrary=".\Release/FLT_LinearCorrection.lib"
+				ImportLibrary="$(IntDir)\FLT_LinearCorrection.lib"
 				TargetMachine="1"
 			/>
 			<Tool
