--- a/DScaler/Plugins/FLT_LogoKill/FLT_LogoKill2005.vcproj
+++ b/DScaler/Plugins/FLT_LogoKill/FLT_LogoKill2005.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="FLT_LogoKill"
 	ProjectGUID="{57EF3E41-5127-4A3C-B524-C16CD68C42A9}"
 	>
@@ -235,10 +235,11 @@
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;FLT_LogoKill_EXPORTS"
 				RuntimeLibrary="3"
-				PrecompiledHeaderFile=".\Debug/FLT_LogoKill.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
@@ -261,8 +262,8 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/FLT_LogoKill.pdb"
-				ImportLibrary=".\Debug/FLT_LogoKill.lib"
+				ProgramDatabaseFile="$(IntDir)\FLT_LogoKill.pdb"
+				ImportLibrary="$(IntDir)\FLT_LogoKill.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -330,10 +331,11 @@
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FLT_LogoKill_EXPORTS"
 				RuntimeLibrary="2"
-				PrecompiledHeaderFile=".\Release/FLT_LogoKill.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation="$(IntDir)\"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				CompileAs="0"
@@ -355,7 +357,7 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				OptimizeForWindows98="1"
-				ImportLibrary=".\Release/FLT_LogoKill.lib"
+				ImportLibrary="$(IntDir)\FLT_LogoKill.lib"
 				TargetMachine="1"
 			/>
 			<Tool
