More Express clean up

--- a/DScaler/Plugins/DI_GreedyH/DI_GreedyH2005.vcproj
+++ b/DScaler/Plugins/DI_GreedyH/DI_GreedyH2005.vcproj
@@ -334,8 +334,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
-				InlineFunctionExpansion="1"
+				Optimization="3"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="DI_GreedyH_EXPORTS;WIN32;NDEBUG;_WINDOWS"
 				StringPooling="true"
