--- a/DScaler/Plugins/DI_TomsMoComp/DI_TomsMoComp2005.vcproj
+++ b/DScaler/Plugins/DI_TomsMoComp/DI_TomsMoComp2005.vcproj
@@ -330,8 +330,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
-				InlineFunctionExpansion="1"
+				Optimization="0"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="..\..\Api"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;DI_TOMSMOCOMP_EXPORTS"
 				StringPooling="true"
