various fixes, now seems to work for AVC1 and H264 with haali splitter

--- a/DScaler5/Filters/Decoders/DivxVideo/DivxVideo.rc
+++ b/DScaler5/Filters/Decoders/DivxVideo/DivxVideo.rc
@@ -97,7 +97,7 @@ STRINGTABLE
 BEGIN
     IDS_PROJNAME            "Divx Video"
     IDS_AUTHORS             "Copyright (c) 2004 Fabrice Bellard et al,  Milan Cutka et al, John Adcock"
-    IDS_NAME                "Divx Video Decoder"
+    IDS_NAME                "MPEG4 Video Decoder"
 END
 
 #endif    // English (U.S.) resources
